--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,14 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
+      - name: install helm
+        uses: azure/setup-helm@v4.3.0
+        with:
+          version: v3.8.1
+
       - name: Release Helm Charts
         uses: helm/chart-releaser-action@v1.7.0
         with:
-          charts_dir: charts/
+          charts_dir: charts
         env:
           CR_TOKEN: "${{ secrets.RUNNER_GITHUB_TOKEN }}"
