--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,6 @@ jobs:
             chartDir=$(dirname "$chart")
             name=$(basename "$chartDir")
             cp -r "$chartDir" "charts/$name"
-            ls -la charts
           done
 
       - name: Configure Git
@@ -43,3 +42,5 @@ jobs:
           charts_dir: charts
         env:
           CR_TOKEN: "${{ secrets.RUNNER_GITHUB_TOKEN }}"
+          CR_GENERATE_RELEASE_NOTES: true
+          CR_SKIP_EXISTING: false
