--- a/rook-ceph-cluster/v1.17.2/examples/values.local.yaml
+++ b/rook-ceph-cluster/v1.17.2/examples/values.local.yaml
@@ -78,16 +78,16 @@ cephClusterSpec:
         memory: "512Mi"
     mon:
       limits:
-        memory: "2Gi"
-      requests:
-        cpu: "1000m"
         memory: "1Gi"
+      requests:
+        cpu: "500m"
+        memory: "512Mi"
     osd:
       limits:
-        memory: "4Gi"
+        memory: "1Gi"
       requests:
-        cpu: "1000m"
-        memory: "4Gi"
+        cpu: "500m"
+        memory: "512Mi"
     prepareosd:
       requests:
         cpu: "500m"
@@ -199,10 +199,10 @@ cephFileSystems:
         activeStandby: true
         resources:
           limits:
-            memory: "4Gi"
+            memory: "1Gi"
           requests:
-            cpu: "1000m"
-            memory: "4Gi"
+            cpu: "500m"
+            memory: "1Gi"
         priorityClassName: system-cluster-critical
     storageClass:
       enabled: true
@@ -261,10 +261,10 @@ cephObjectStores:
         port: 80
         resources:
           limits:
-            memory: "2Gi"
-          requests:
-            cpu: "1000m"
             memory: "1Gi"
+          requests:
+            cpu: "500m"
+            memory: "512Mi"
         instances: 1
         priorityClassName: system-cluster-critical
     storageClass:
