--- a/wanaia-helmfile/helmfile.yaml
+++ b/wanaia-helmfile/helmfile.yaml
@@ -7,3 +7,6 @@ helmfiles:
     selectors:
       - component=rook-ceph
       - component=rook-ceph-cluster
+
+# export COMPONENT_ENV=local
+# helmfile apply -f wanaia-helmfile/helmfile.yaml
