--- a/jaeger-operator/2.57.0/examples/values.local.yaml
+++ b/jaeger-operator/2.57.0/examples/values.local.yaml
@@ -14,7 +14,6 @@ jaeger:
       enabled: true
       annotations:
         kubernetes.io/ingress.class: nginx
-
 service:
   type: ClusterIP
 replicaCount: 1
@@ -25,3 +24,6 @@ resources:
   requests:
     cpu: 100m
     memory: 128Mi
+rbac:
+  create: true
+  clusterRole: true
